--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Start Header -->
     <header id="header">
       <div class="logo">
-        <img src="imgs/logo.png" alt="logo" />
+        <img src="imgs/favicon.png" alt="logo" />
       </div>
       <nav class="main-nav d-md-flex d-none">
         <ul class="ul-nav">
