--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
                 <a
                   class="button"
-                  href="https://drive.google.com/file/d/1xIQUF2YCjfsAoEN4MgiEZVnVgflK0TS-/view?usp=drive_link"
+                  href="https://drive.google.com/file/d/1KM-0zqwiH54ycOFHOv2eZa2_G35wNgMm/view?usp=sharing"
                   download
                 >
                   Download CV
